--- a/index.html
+++ b/index.html
@@ -63,11 +63,17 @@
         </section>
 
         <section>
+        <section data-markdown>
+        ## Et plus encore !
+        </section>
+
+        <section>
           <img src="images/remoteMethods.png"/>
         </section>
 
         <section>
           <img src="images/hooks.png"/>
+        </section>
         </section>
 
         <section>
@@ -80,7 +86,15 @@
         </section>
 
         <section>
-          <img src="images/generateAngular.png"/>
+          <img src="images/service.png"/>
+        </section>
+
+        <section>
+          <img src="images/angular.png"/>
+        </section>
+
+        <section>
+          <img src="images/angularSave.png"/>
         </section>
         </section>
 
